--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta charset = 'utf-8'>
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="jsfile.js" defer></script>
 
 </head>
 
 <body>
     <div id = 'calculator'>
-        <div class="display">lolololol</div>
+        <div class="display"> </div>
         <div class="buttons">
             <button class="allClear">AC</button>
             <button class="clear">C</button>
