--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
     <div id = 'calculator'>
-        <div class="display"> </div>
-        <div class="buttons">
+        <div class="display">nice</div>
+            <div class="buttons">
             <button class="allClear">AC</button>
             <button class="clear">C </button>
             <button class="op">÷</button>
             <button class="num">7</button>
             <button class="num">8</button>
-            <button class="num">9</button>
+        <button class="num">9</button>
             <button class="op">x</button>
             <button class="num">4</button>
             <button class="num">5</button>
@@ -35,6 +35,7 @@
             <button class="calc">=</button>
         </div>
     </div>
+    
 </body>
 
 </html>
